[metadata]
name = agamotto
version = 0.0.1

[options]
python_requires = >=3.9
install_requires =
    sanic
    protobuf
    fastecdsa==2.1.5
    mmh3==3.0.0
    numpy==1.21.0
    tenseal==0.3.4
packages = find:
[options.packages.find]  
    where=src/
[options.entry_points]
console_scripts =
    agamotto-node = agamotto.__main__:main
    agamotto-cli = cli.__main__:main
